--- a/app/partials/workout.html
+++ b/app/partials/workout.html
@@ -1,8 +1,9 @@
-<div class="row">
+<div class="row workout-app-container">
     <div id="description-panel" class="col-sm-2" ng-include="'partials/description-panel.html'"></div>
     <div id="exercise-pane" class="col-sm-7">
         <div class="row workout-content">
             <div class="workout-display-div">
+                <h4>Workout Remaining - {{workoutTimeRemaining | secondsToTime}}</h4>
                 <h1>{{currentExercise.details.title}}</h1>
                 <img class="img-responsive"
                      ng-src="{{currentExercise.details.image}}"/>
@@ -12,19 +13,22 @@
                          ng-style="{'width' :(currentExerciseDuration/currentExercise.duration) * 100 + '%'}">
                     </div>
                 </div>
-                <h1>Time Remaining: {{currentExercise.duration - currentExerciseDuration}}</h1>
+            </div>
+            <div class="row">
+                <h3 class="col-sm-6 text-left">Time Remaining: <strong>{{currentExercise.duration - currentExerciseDuration}}</strong></h3>
+                <h3 class="col-sm-6 text-right" ng-if="currentExercise.details.name=='rest'">Next up: <strong>{{workoutPlan.exercises[0].details.title}}</strong></h3>
             </div>
         </div>
     </div>
     <div id="video-panel" class="col-sm-3" ng-include="'video-panel.html'"></div>
     <script type="text/ng-template" id="video-panel.html">
-        <div class="panel panel-default">
+        <div class="panel panel-info">
             <div class="panel-heading">
                 <h3 class="panel-title">Videos</h3>
             </div>
             <div class="panel-body">
                 <div ng-repeat="video in currentExercise.details.related.videos">
-                    <iframe width="330" height="220" src="{{video}}" frameborder="0" allowfullscreen></iframe>
+                    <iframe width="100%" height="220" src="{{video}}" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </div>
