--- a/app/partials/workout.html
+++ b/app/partials/workout.html
@@ -1,6 +1,9 @@
-<div class="row workout-app-container">
+<div class="row workout-app-container" tabindex="1" ng-keypress="onKeyPressed($event)">
     <div id="description-panel" class="col-sm-2" ng-include="'partials/description-panel.html'"></div>
     <div id="exercise-pane" class="col-sm-7">
+        <div id="pause-overlay" ng-click="pauseResumeToggle()">
+            <span class="glyphicon glyphicon-pause pause absolute-center" ng-class="{'glyphicon-pause' : !workoutPaused, 'glyphicon-play' : workoutPaused}"></span>
+        </div>
         <span ng-controller="WorkoutAudioController">
             <audio media-player="ticksAudio" loop autoplay src="content/tick10s.mp3"></audio>
             <audio media-player="nextUpAudio" src="content/nextup.mp3"></audio>
@@ -24,7 +27,8 @@
             <div class="row">
                 <h3 class="col-sm-6 text-left">Time Remaining: <strong>{{currentExercise.duration -
                     currentExerciseDuration}}</strong></h3>
-                <h3 class="col-sm-6 text-right" ng-if="currentExercise.details.name=='rest'">Next up: <strong>{{workoutPlan.exercises[currentExerciseIndex + 1].details.title}}</strong>
+                <h3 class="col-sm-6 text-right" ng-if="currentExercise.details.name=='rest'">Next up: <strong>{{workoutPlan.exercises[currentExerciseIndex
+                    + 1].details.title}}</strong>
                 </h3>
             </div>
         </div>
